--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,69 @@
-/* Tiny reset thingy */
-body,html{margin:0;padding:0; overflow-y: hidden;}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600,600i|Roboto');
+:root {
+    --primary-color: #3b2019; 
+    --secondary-color: #fac27f; 
+	--terciary-color: #f25481; 
+	--fourth-color: #61412e; 
+	font-family: 'Montserrat', sans-serif;
+	font-family: 'Roboto', sans-serif;
+}
+*, *:before, *:after {
+	box-sizing: border-box;
+}
+body,html{
+	margin:0;
+	padding:0; 
+	overflow-y: hidden;
+}
+.main-header{
+	box-sizing: border-box;
+	position: absolute;
+	width: 100%;
+	padding: 0;
+	left: 0;
+	z-index: 10;
+	background: repeating-linear-gradient(
+		90deg,
+		var(--primary-color) 10px,
+		var(--primary-color) 11.4px,
+		var(--fourth-color) 13px,
+		var(--fourth-color) 12px
+		);
+	background-color: var(--primary-color);
+	box-shadow: 0px -7px 10px 10px var(--secondary-color);
+}
+.main-header > .nav-toggle{
+	position: absolute;
+    top: 30px;
+    left: 5%;
+
+}
+.main-header > .nav-toggle div{
+    width: 35px;
+    height: 5px;
+    background-color: var(--secondary-color);
+    margin: 6px 0;
+}
+.top-stripe{
+	top: 0;
+	width: 100%;
+	height:10px;
+	background-color: var(--terciary-color);
+	background-image: radial-gradient(black 15%, transparent 30%),
+	radial-gradient(black 15%, transparent 30%);
+	background-size:10px 20px;
+	background-position: 0 17px, 55px 32px;
+	z-index: 444;
+}
+.website-title{
+	text-align: center;
+	color: var(--secondary-color);
+	text-shadow: 
+		1px 0px 0px var(--terciary-color), 
+		1px 1px 0px var(--terciary-color),
+		1px 1px 1px var(--terciary-color);
+}
+
 .parallax-wrapper {
 	/* The height needs to be set to a fixed value for the effect to work.
 	* 100vh is the full height of the viewport. */
