--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,10 @@ body,html{
 	padding:0; 
 	overflow-y: hidden;
 }
+a{
+	text-decoration: none;
+	color: white;
+}
 .main-header{
 	box-sizing: border-box;
 	position: absolute;
@@ -32,9 +36,59 @@ body,html{
 	background-color: var(--primary-color);
 	box-shadow: 0px -7px 10px 10px var(--secondary-color);
 }
+
+/* ROADMAP */
+.roadmap{
+	padding: 1em 1em;
+	background-color: white;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	text-align: center;
+}
+.destination{
+	padding: 1em;
+	background-color: #bdc3c7;
+	border-radius: 40px;
+}
+.destination{
+	display: grid;
+	grid-template-rows: min-content;
+}
+.destination > span:last-child{
+	font-size: .7em;
+}
+.roadmap > a:last-child div{
+	background-color: #487eb0;
+}
+.connection{
+	display: block;
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #ccc;
+	margin: auto 1em;
+	padding: 0;
+}
+.connection::after{
+	content: '';
+	width: 0; 
+	height: 0; 
+	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent;
+	border-left: 5px solid #ccc;
+	float:right;
+	margin-top: -10px;
+}
+.current{
+	background-color: #27ae60;
+	border-radius: 40px;
+	text-shadow: 2px 1px 3px black;
+}
+/* ROADMAP */
+
+/* MOBILE MENU BUTTON */
 .main-header > .nav-toggle{
 	position: absolute;
-    top: 30px;
+    top: 69%;
     left: 5%;
 
 }
@@ -44,6 +98,7 @@ body,html{
     background-color: var(--secondary-color);
     margin: 6px 0;
 }
+/* MOBILE MENU BUTTON */
 .top-stripe{
 	top: 0;
 	width: 100%;
@@ -56,25 +111,20 @@ body,html{
 	z-index: 444;
 }
 .website-title{
-	text-align: center;
+	text-align: right;
+	margin-top: 15px;
+    margin-bottom: 15px;
+	margin-right: 0.5em;
 	color: var(--secondary-color);
-	text-shadow: 
-		1px 0px 0px var(--terciary-color), 
-		1px 1px 0px var(--terciary-color),
-		1px 1px 1px var(--terciary-color);
+	text-transform: uppercase;
 }
-
 .parallax-wrapper {
-	/* The height needs to be set to a fixed value for the effect to work.
-	* 100vh is the full height of the viewport. */
 	height: 100vh;
-	/* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
 	overflow-x: hidden;
-	/* Enable scrolling on the page. */
 	overflow-y: auto;
-	/* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
 	perspective: 2px;
 }
+/* MAIN NAVIGATION */
 .main-nav{
 	position: fixed;
 	color:white;
@@ -86,7 +136,7 @@ body,html{
 	overflow: hidden;
 	font-size: 7vw;
 	display: grid;
-	grid-template-rows: repeat(7, 1fr);
+	grid-template-rows: repeat(8, 1fr);
 	justify-items: center;
 	z-index: 5;
 	transform: translate(-100%);
@@ -121,13 +171,10 @@ body,html{
 	display: block;
 	z-index: -1;
 }
+/* MAIN NAVIGATION */
 .section {
-	/* Needed for children to be absolutely positioned relative to the parent. */
 	position: relative;
-	/* The height of the container. Must be set, but it doesn't really matter what the value is. */
 	height: 100vh;
-
-	/* For text formatting. */
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -135,28 +182,20 @@ body,html{
 	text-shadow: 0 0 5px #000;
 }
 .parallax::after {
-	/* Display and position the pseudo-element */
 	content: " ";
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	/* Move the pseudo-element back away from the camera,
-	* then scale it back up to fill the viewport.
-	* Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
 	transform: translateZ(-1px) scale(1.5);
-	/* Force the background image to fill the whole element. */
 	background-size: 100%;
-	/* Keep the image from overlapping sibling elements. */ 
 	z-index: -1;
 }
-/* The styling for the static div. */
 .static {
   background: beige;
   height: 50vh !important;
 }
-/* Sets the actual background images to adorable kitties. This part is crucial. */
 .bg1::after {
     left: -1%;
     background: url('https://picsum.photos/1920/1080?image=1084') no-repeat center;
