--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,7 +34,7 @@ a{
 		var(--fourth-color) 12px
 		);
 	background-color: var(--primary-color);
-	box-shadow: 0px -7px 10px 10px var(--secondary-color);
+	box-shadow: 0 -8px 5px 10px var(--primary-color);
 }
 
 /* ROADMAP */
@@ -100,15 +100,14 @@ a{
 }
 /* MOBILE MENU BUTTON */
 .top-stripe{
-	top: 0;
-	width: 100%;
-	height:10px;
-	background-color: var(--terciary-color);
-	background-image: radial-gradient(black 15%, transparent 30%),
-	radial-gradient(black 15%, transparent 30%);
-	background-size:10px 20px;
-	background-position: 0 17px, 55px 32px;
-	z-index: 444;
+    top: 0;
+    width: 100%;
+    height: 11px;
+    background-color: var(--terciary-color);
+    background-image: radial-gradient(#000 0%,transparent 20%),radial-gradient(#000 0%,transparent 20%);
+    background-size: 10px 19px;
+    background-position: 0 17px,55px 32px;
+    z-index: 10;
 }
 .website-title{
 	text-align: right;
@@ -198,13 +197,14 @@ a{
 }
 .bg1::after {
     left: -1%;
-    background: url('https://picsum.photos/1920/1080?image=1084') no-repeat center;
-    background-size: cover;
+    background: url('/dist/assets/img/bq.jpg') no-repeat center;
+	background-size: cover;
+	background-position-y: 60%;
 }
 
 .bg2::after {
   	left: -1%;
-    background: url('https://picsum.photos/1920/1080?image=1079') no-repeat center;
+    background: url('/dist/assets/img/bq4.jpg') no-repeat center;
     background: cover;
 }
 .footer{
