--- a/src/css/main.css
+++ b/src/css/main.css
@@ -135,11 +135,11 @@ a{
     width: 28%;
 	margin-left: 75%;
 	z-index: 5; */
-	width: 28%;
+	width: 105px;
 	z-index: 5;
 	position: absolute;
 	right: 0%;
-	top: 65px;
+	top: 69px;
 }
 .nav-mobile-logo{
 	width: 40%
