--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 	--fifth-color: #351f17;
 	font-family: 'Montserrat', sans-serif;
 	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
 }
 *, *:before, *:after {
 	box-sizing: border-box;
@@ -24,7 +25,7 @@ a{
 	box-sizing: border-box;
 	position: absolute;
 	width: 100%;
-	height: 150px;
+	height: 120px;
 	padding: 0;
 	left: 0;
 	z-index: 5;
@@ -40,27 +41,26 @@ a{
 
 /* ROADMAP */
 .roadmap{
-	padding: 1em 1em;
+	padding: 0.5rem 1rem;
 	background-color: white;
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	text-align: center;
 }
 .destination{
-	padding: 1em;
-	background-color: #bdc3c7;
-	border-radius: 40px;
-}
-.destination{
 	display: grid;
 	grid-template-rows: min-content;
+	padding: 1em;
+	background-color: var(--first-color);
+	border-radius: 40px;
+	text-transform: uppercase;
 }
 .destination > span:last-child{
 	font-size: .7em;
 }
-.roadmap > a:last-child div{
+/* .roadmap > a:last-child div{
 	background-color: #487eb0;
-}
+} */
 .connection{
 	display: block;
 	height: 1px;
@@ -80,7 +80,7 @@ a{
 	margin-top: -10px;
 }
 .current{
-	background-color: #27ae60;
+	background-color: var(--third-color);
 	border-radius: 40px;
 	text-shadow: 2px 1px 3px black;
 }
@@ -92,15 +92,19 @@ a{
 }
 .main-header > .nav-toggle{
 	position: absolute;
-    top: 72%;
-    left: 5%;
-
+    top: 76px;
+    left: 15px;
+	transition: left .5s ease-in-out;
 }
 .main-header > .nav-toggle div{
     width: 35px;
     height: 5px;
     background-color: var(--second-color);
-    margin: 6px 0;
+	margin: 6px 0;
+	box-shadow: 0 0 5px 0px var(--second-color);
+}
+.main-header > .nav-toggle:active{
+	left: 150px;
 }
 /* MOBILE MENU BUTTON */
 .top-stripe{
@@ -139,7 +143,7 @@ a{
 	z-index: 5;
 	position: absolute;
 	right: 0%;
-	top: 69px;
+	top: 39px;
 }
 .nav-mobile-logo{
 	width: 40%
@@ -184,7 +188,7 @@ a{
 	text-align: center;
 	transition: all .2s ease-in-out;
 }
-.main-nav .nav-toggle:hover { 
+.main-nav .nav-toggle:hover{ 
 	transform: scale(1.2) rotate(180deg);
 }
 .nav-close-icon{
