--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'antro-normal';
+    src: url('/dist/assets/fonts/Antro_Vectra.otf');
+}
+@font-face {
+    font-family: 'antro-bold';
+    src: url('/dist/assets/fonts/Antro_Vectra_Bolder.otf');
+}
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,600i|Roboto');
 :root {
     --first-color: #3b2019; 
@@ -5,8 +13,7 @@
 	--third-color: #f68271; 
 	--fourth-color: #61412e;
 	--fifth-color: #351f17;
-	font-family: 'Montserrat', sans-serif;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Montserrat','Roboto', sans-serif;
 	font-size: 16px;
 }
 *, *:before, *:after {
@@ -31,6 +38,9 @@ a{
 .btn-nav:hover{
 	/* text-shadow: 0px 5px 0px var(--third-color); */
 	transform: scale(1.5);
+}
+.show-more{
+	display: none;
 }
 .main-header{
 	box-sizing: border-box;
@@ -113,9 +123,6 @@ a{
     background-color: var(--second-color);
 	margin: 6px 0;
 	box-shadow: 0 0 5px 0px var(--second-color);
-}
-.main-header > .nav-toggle:active{
-	left: 150px;
 }
 .btn.nav-toggle{
 	padding: 0;
@@ -239,7 +246,7 @@ a{
 	align-items: center;
 	justify-content: center;
 	color: white;
-	text-shadow: 0 0 5px #000;
+	/* text-shadow: 0 0 5px #000; */
 }
 .parallax::after {
 	content: " ";
@@ -253,8 +260,39 @@ a{
 	z-index: -1;
 }
 .static {
-  background: beige;
-  height: 50vh !important;
+	font-size: 2.5vh;
+	height: auto !important;
+	display: grid;
+	grid-auto-rows: min-content;
+	/* grid-template-rows: repeat(2, 1fr); */
+	text-align: justify;
+	padding: 0em 1.3em;		
+	background: repeating-linear-gradient(
+		180deg,
+		white 2px,
+		white 12.4px,
+		var(--fourth-color) 13px,
+		var(--fourth-color) 0);
+    box-shadow: inset 0 0 40px var(--fifth-color);
+	color: var(--fourth-color);
+	font-family: 'antro-normal', 'Montserrat','Roboto' ;
+	font-weight: bold;
+}
+.static p{
+	padding: 0;
+	margin: 0 0 1rem 0;
+}
+.bg1 > div{
+	display: flex;
+	flex-direction: column;
+	margin-top: -47vh;
+	color: var(--fourth-color);
+	font-family: 'antro-bold', 'Montserrat','Roboto' ;
+	text-align: center;
+	font-size: 1.4em;
+}
+.bg1 > div > * {
+	margin: 0;
 }
 .bg1::after {
     left: -1%;
@@ -262,10 +300,19 @@ a{
 	background-size: cover;
 	background-position-y: 60%;
 }
-
 .bg2::after {
   	left: -1%;
     background: url('/dist/assets/img/bq4.jpg') no-repeat center;
+    background: cover;
+}
+.bg3::after {
+  	left: -1%;
+    background: url('/dist/assets/img/bq2.jpg') no-repeat center;
+    background: cover;
+}
+.bg4::after {
+  	left: -1%;
+    background: url('/dist/assets/img/bq3.jpg') no-repeat center;
     background: cover;
 }
 .footer{
