--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,13 +8,15 @@
 }
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,600i|Roboto');
 :root {
-    --first-color: #3b2019; 
+    --card-dark-dark-color: #3b2019; 
+	--card-dark-light-color: #351f17;
+	--card-light-light-color: #fbc382;
+	--card-light-dark-color: #f8a67a;
     --second-color: #fac27f; 
 	--third-color: #f68271; 
 	--fourth-color: #61412e;
-	--fifth-color: #351f17;
 	font-family: 'Montserrat','Roboto', sans-serif;
-	font-size: 16px;
+	font-size: 14px;
 }
 *, *:before, *:after {
 	box-sizing: border-box;
@@ -42,22 +44,44 @@ a{
 .show-more{
 	display: none;
 }
+.card-background-light{
+	box-shadow: inset 0 0 40px var(--card-light-light-color);
+	color: var(--card-dark-dark-color) !important;
+	background: repeating-linear-gradient(
+		90deg,
+		var(--card-light-dark-color) 4px,
+		var(--card-light-dark-color) 8px,
+		var(--card-light-light-color) 6px,
+		var(--card-light-light-color) 11px
+	);
+}
+.card-background-dark{
+	box-shadow: inset 0 0 40px var(--card-dark-light-color);
+	color: var(--card-light-light-color) !important;;
+	background: repeating-linear-gradient(
+		90deg,
+		var(--card-dark-dark-color) 4px,
+		var(--card-dark-dark-color) 8px,
+		var(--card-dark-light-color) 6px,
+		var(--card-dark-light-color) 11px
+	);
+}
 .main-header{
 	box-sizing: border-box;
 	position: absolute;
 	width: 100%;
-	height: 120px;
+	height: 115px;
 	padding: 0;
 	left: 0;
 	z-index: 5;
 	background: repeating-linear-gradient(
 		90deg,
-		var(--first-color) 8px,
-		var(--first-color) 12.4px,
-		var(--fourth-color) 13px,
-		var(--fourth-color) 0);
-	background-color: var(--first-color);
-	box-shadow: 0 -8px 5px 10px var(--first-color);
+		var(--card-dark-dark-color) 4px,
+		var(--card-dark-dark-color) 8px,
+		var(--fourth-color) 0px,
+		var(--fourth-color) 9px);
+	background-color: var(--card-dark-dark-color);
+	box-shadow: 0 -8px 5px 10px var(--card-dark-dark-color);
 }
 
 /* ROADMAP */
@@ -72,7 +96,7 @@ a{
 	display: grid;
 	grid-template-rows: min-content;
 	padding: 1em;
-	background-color: var(--first-color);
+	background-color: var(--card-dark-dark-color);
 	border-radius: 40px;
 	text-transform: uppercase;
 }
@@ -113,7 +137,7 @@ a{
 }
 .main-header > .nav-toggle{
 	position: absolute;
-    top: 76px;
+    top: 71px;
 	left: 15px;
 	transition: left .5s ease-in-out;
 }
@@ -135,11 +159,11 @@ a{
     background-color: var(--third-color);
 	background-image: 
 	radial-gradient(
-		var(--fifth-color) 17%,
+		var(--card-dark-light-color) 17%,
 		transparent 25%
 	),
 	radial-gradient(
-		var(--fifth-color) 17%,
+		var(--card-dark-light-color) 17%,
 		transparent 25%
 	);
     background-size: 10px 17px;
@@ -164,7 +188,7 @@ a{
 	z-index: 5;
 	position: absolute;
 	right: 0%;
-	top: 39px;
+	top: 33px;
 }
 .nav-mobile-logo{
 	width: 40%
@@ -179,7 +203,7 @@ a{
 .main-nav{
 	position: fixed;
 	color:white;
-	background-color: var(--fifth-color);
+	background-color: var(--card-dark-light-color);
 	top: 0;
 	left: 0;
 	height: 100vh;
@@ -261,20 +285,13 @@ a{
 }
 .static {
 	font-size: 2.5vh;
+	min-height: 50% !important;
 	height: auto !important;
 	display: grid;
 	grid-auto-rows: min-content;
 	/* grid-template-rows: repeat(2, 1fr); */
 	text-align: justify;
 	padding: 0em 1.3em;		
-	background: repeating-linear-gradient(
-		180deg,
-		white 2px,
-		white 12.4px,
-		var(--fourth-color) 13px,
-		var(--fourth-color) 0);
-    box-shadow: inset 0 0 40px var(--fifth-color);
-	color: var(--fourth-color);
 	font-family: 'antro-normal', 'Montserrat','Roboto' ;
 	font-weight: bold;
 }
@@ -285,11 +302,11 @@ a{
 .bg1 > div{
 	display: flex;
 	flex-direction: column;
-	margin-top: -47vh;
+	margin-top: -35vh;
 	color: var(--fourth-color);
 	font-family: 'antro-bold', 'Montserrat','Roboto' ;
 	text-align: center;
-	font-size: 1.4em;
+	font-size: 1.2em;
 }
 .bg1 > div > * {
 	margin: 0;
