--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,7 +138,7 @@ a{
 .main-header > .nav-toggle{
 	position: absolute;
     top: 71px;
-	left: 15px;
+	right: 5%;
 	transition: left .5s ease-in-out;
 }
 .main-header > .nav-toggle div{
@@ -187,7 +187,7 @@ a{
 	width: 105px;
 	z-index: 5;
 	position: absolute;
-	right: 0%;
+	left: -2px;
 	top: 33px;
 }
 .nav-mobile-logo{
@@ -227,19 +227,37 @@ a{
 	transform: translate(0);
 }
 .main-nav .nav-toggle{
-	position: absolute;
-	top: 25px;
-    right: 5%;
-	text-align: center;
-	transition: all .2s ease-in-out;
+    position: absolute;
+    top: 70px;
+    right: -50px;
+	text-align: left;
+	width: 65px;
+	
+    /* transition: left .9s ease-in-out; */
 }
-.main-nav .nav-toggle:hover{ 
-	transform: scale(1.2) rotate(180deg);
-}
+/* .main-nav .nav-toggle:hover{ 
+	right: 1px;
+} */
 .nav-close-icon{
 	background-color: var(--third-color);
-	padding: 0.25em 0.5em;
-	border-radius: 30%;
+	padding: .85em 1.1em;
+	text-align: left;
+    border-top-left-radius: 30%;
+    border-bottom-left-radius: 30%;
+	/* box-shadow: 0px 0px 10px var(--second-color); */
+}
+i{
+	border: solid var(--card-dark-light-color);
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+	padding: 3px;
+	margin-left: -10px;
+    width: 16px;
+    height: 17px;
+}
+.right{
+	transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
 }
 .main-nav > div {
 	margin: 0.5em 1em;
@@ -292,7 +310,7 @@ a{
 	/* grid-template-rows: repeat(2, 1fr); */
 	text-align: justify;
 	padding: 0em 1.3em;		
-	font-family: 'antro-normal', 'Montserrat','Roboto' ;
+	font-family: 'Montserrat','Roboto' ;
 	font-weight: bold;
 }
 .static p{
@@ -302,11 +320,11 @@ a{
 .bg1 > div{
 	display: flex;
 	flex-direction: column;
-	margin-top: -35vh;
+	margin-top: -38vh;
 	color: var(--fourth-color);
 	font-family: 'antro-bold', 'Montserrat','Roboto' ;
 	text-align: center;
-	font-size: 1.2em;
+	font-size: 2.5vh;
 }
 .bg1 > div > * {
 	margin: 0;
