--- a/src/css/main.css
+++ b/src/css/main.css
@@ -171,15 +171,8 @@ a{
     margin-bottom: 15px;
 	margin-right: 0.5em;
 	color: var(--second-color);
-	/* text-transform: uppercase; */
 }
 .logo-landing-page{
-/* 	margin-top: -75%;
-	width: 40%; */
-/* 	margin-top: -146%;
-    width: 28%;
-	margin-left: 75%;
-	z-index: 5; */
 	width: 105px;
 	z-index: 5;
 	position: absolute;
@@ -193,7 +186,7 @@ a{
 	height: 100vh;
 	overflow-x: hidden;
 	overflow-y: auto;
-	perspective: 2px;
+	perspective: 2;
 }
 /* MAIN NAVIGATION */
 .main-nav{
@@ -340,3 +333,126 @@ i{
 .footer{
 	background-color: black;
 }
+
+/* PARALLAX FLIPPING CARD */
+
+.flip-card-grid{
+/* 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center; */
+	display: grid;
+	grid-template-columns: repeat(1, 3fr);
+}
+.col{
+	width: 100%;
+	margin: 1rem;
+	cursor: pointer;
+	perspective: 700;
+}
+
+.container{
+	transform-style: preserve-3d;
+	perspective: 700;
+}
+
+.front,
+.back{
+	background-size: cover;
+	background-position: center;
+	transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+	backface-visibility: hidden;
+	text-align: center;
+	min-height: 280px;
+	height: auto;
+	border-radius: 10px;
+	color: #fff;
+	font-size: 1.5rem;
+}
+.back{
+	background: #cedce7;
+	background: linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+}
+  
+.front:after{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	content: '';
+	display: block;
+	opacity: .6;
+	background-color: #000;
+	backface-visibility: hidden;
+	border-radius: 10px;
+}
+.container:hover .front,
+.container:hover .back{
+	transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+}
+.back{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+}
+.inner{
+	transform: translateY(-50%) translateZ(60px) scale(0.94);
+	top: 50%;
+	position: absolute;
+	left: 0;
+	width: 100%;
+	padding: 2rem;
+	box-sizing: border-box;
+	outline: 1px solid transparent;
+	perspective: inherit;
+	z-index: 2;
+}
+.container .back{
+	transform: rotateY(180deg);
+	transform-style: preserve-3d;
+}
+.container .front{
+	transform: rotateY(0deg);
+	transform-style: preserve-3d;
+}
+.container:hover .back{
+	transform: rotateY(0deg);
+	transform-style: preserve-3d;
+}
+.container:hover .front{
+	transform: rotateY(-180deg);
+	transform-style: preserve-3d;
+}
+.front .inner p{
+	font-size: 2rem;
+	margin-bottom: 2rem;
+	position: relative;
+}
+.front .inner p:after{
+	content: '';
+	width: 4rem;
+	height: 2px;
+	position: absolute;
+	background: #C6D4DF;
+	display: block;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	bottom: -.75rem;
+}
+
+/* PARALLAX FLIPPING CARD */
+
+/* @media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... } */
