--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,6 +65,9 @@ a{
 		var(--card-dark-light-color) 11px
 	);
 }
+.card-background-dark > div, .card-background-light > div{
+	margin-bottom: 1.8em;
+}
 .main-header{
 	box-sizing: border-box;
 	position: absolute;
@@ -125,6 +128,24 @@ a{
 .footer{
 	background-color: black;
 }
+#scroll-to-top {
+	display: none; /* Hidden by default */
+	position: fixed; /* Fixed/sticky position */
+	bottom: 10px; /* Place the button at the bottom of the page */
+	right: 10px; /* Place the button 30px from the right */
+	z-index: 99; /* Make sure it does not overlap */
+	border: none; /* Remove borders */
+	outline: none; /* Remove outline */
+	background-color: var(--card-dark-light-color); /* Set a background color */
+	color: white; /* Text color */
+	cursor: pointer; /* Add a mouse pointer on hover */
+	padding: 10px; /* Some padding */
+	border-radius: 10px; /* Rounded corners */
+	font-size: 1em; /* Increase font size */
+}
+#scroll-to-top:hover {
+	background-color: #555; /* Add a dark-grey background on hover */
+}   
 /* 
 __________
 
@@ -406,8 +427,6 @@ __________
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-/* 	display: grid;
-	grid-template-columns: repeat(1, 3fr); */
 }
 .col{
 	width: 100%;
