--- a/src/css/main.css
+++ b/src/css/main.css
@@ -198,7 +198,7 @@ __________
 	padding: 0.5rem 1rem;
 	background-color: white;
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	grid-template-columns: 1fr 1fr;
 	text-align: center;
 }
 .destination{
@@ -521,11 +521,24 @@ __________
 	position: absolute;
 	left: 0;
 	width: 100%;
-	padding: 2rem;
+	/* padding: 2rem; */
+	padding: 1rem;
+	/* No font size inityally */
+	font-size: 0.7em;
 	box-sizing: border-box;
 	outline: 1px solid transparent;
 	perspective: inherit;
 	z-index: 2;
+}
+.inner > div {
+	padding: .2em .1em;
+}
+.back-inner-padding{
+	padding: 0.5em;
+}
+.product-grid{
+	display: grid; 
+	grid-template-columns: repeat(2, 1fr);
 }
 .container .back{
 	transform: rotateY(180deg);
