--- a/src/css/main.css
+++ b/src/css/main.css
@@ -56,7 +56,7 @@ a{
 }
 .card-background-dark{
 	box-shadow: inset 0 0 40px var(--card-dark-light-color);
-	color: var(--card-light-light-color) !important;;
+	color: var(--card-light-light-color) !important;
 	background: repeating-linear-gradient(
 		90deg,
 		var(--card-dark-dark-color) 4px,
