--- a/src/css/alternate.css
+++ b/src/css/alternate.css
@@ -11,9 +11,11 @@
     --second-color: #fac27f; 
 	--third-color: #f68271; 
     --fourth-color: #61412e;
+    font-family: 'Montserrat','Roboto';
+    color: var(--card-light-light-color);
 }
 html, body{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: repeating-linear-gradient(
 		90deg,
@@ -21,36 +23,85 @@ html, body{
 		var(--card-dark-dark-color) 8px,
 		var(--card-dark-light-color) 6px,
 		var(--card-dark-light-color) 11px
-	);
+    );
+    
 }
-.hand-written-text{
-    font-family: 'antro-bold', 'Montserrat','Roboto';
+.grid-wrapper{
+    display: grid;
+    grid-auto-rows: min-content;
+    padding: 1rem 1rem;
+    height: 100%;
+}
+.top-text{
     font-size: 1.1em;
-    position: absolute;
-    width: 300px;
-    left: 50%;
-    margin-left: -155px;    
-    height: 300px;
-    top: 50%;
-    margin-top: -85%;
     text-align: center;
-    color: var(--card-light-light-color) !important;
 }
 .logo-landing-page{
     background: url('/dist/assets/img/logo.png') no-repeat center;
     background-size: contain;
     width: auto;
-    height: 100vh;
+    height: 40vh;
+    margin-top: -25px;
 }
-.information{
-    font-family: 'Montserrat','Roboto';
-    position: absolute;
-    width: 300px;
-    left: 50%;
-    margin-left: -155px;    
-    height: 300px;
-    bottom: -50%;
-    margin-bottom: 40%;
+.bottom-text{
+    font-family: antro-bold;
     text-align: center;
-    color: var(--card-light-light-color) !important;
+    font-size: 2em;
+
+}
+#mc_embed_signup_scroll{
+    display: grid;
+    text-align: justify;
+    padding: 0.8rem 0;
+    font-size: 0.8em;
+}
+#mc_embed_signup_scroll > * {
+    margin: .5rem 0;
+}
+#mc-embedded-subscribe-form input[type=email]{
+    padding: .3rem;
+}
+#mc-embedded-subscribe-form input[type=submit]{
+    width: fit-content;
+    justify-self: end;
+    padding: .4rem;
+    color: var(--card-dark-light-color);
+	background-color: var(--card-light-light-color);
+	/* border: solid 1px var(--card-light-light-color); */
+	border: none;
+    width: fit-content;
+    outline: 20px;
+    border-radius: 2px;
+	transition: all 0.3s ease-in-out;
+}
+#mc-embedded-subscribe-form input[type=submit]:hover{
+	box-shadow: inset 0px 0px 10px var(--card-dark-dark-color);
+	color: white;
+}
+#mergeRow-gdpr {
+    margin-top: 20px;
+}
+#mc-embedded-subscribe-form .mc_fieldset{
+    border:none;
+    min-height: 0px;
+    padding-bottom:0px;
+}
+
+@media (min-width: 576px) {
+
+}
+
+/* Medium devices tablets, 768px and up */
+@media (min-width: 768px) {
+
+}
+
+/* Large devices desktops, 992px and up */
+@media (min-width: 992px) {
+    
+}
+
+/* Extra large devices large desktops, 1200px and up */
+@media (min-width: 1200px) {
+    
 }
