--- a/src/css/main.css
+++ b/src/css/main.css
@@ -171,7 +171,7 @@ a{
 	background-color: var(--card-light-light-color);
 	/* border: solid 1px var(--card-light-light-color); */
 	border: none;
-    width: 5em;
+    width: fit-content;
     outline: 20px;
     border-radius: 2px;
 	transition: all 0.3s ease-in-out;
