--- a/src/css/alternate.css
+++ b/src/css/alternate.css
@@ -29,7 +29,7 @@ html, body{
 .grid-wrapper{
     display: grid;
     grid-auto-rows: min-content;
-    padding: 1rem 1rem;
+    padding: 0 1rem;
     height: 100%;
 }
 .top-text{
@@ -41,18 +41,17 @@ html, body{
     background-size: contain;
     width: auto;
     height: 40vh;
-    margin-top: -25px;
 }
 .bottom-text{
     font-family: antro-bold;
     text-align: center;
     font-size: 2em;
-
+    margin-top: -1.5rem;
 }
 #mc_embed_signup_scroll{
     display: grid;
     text-align: justify;
-    padding: 0.8rem 0;
+    padding: 0 0;
     font-size: 0.8em;
 }
 #mc_embed_signup_scroll > * {
@@ -60,6 +59,14 @@ html, body{
 }
 #mc-embedded-subscribe-form input[type=email]{
     padding: .3rem;
+    border-radius: 2px;
+    outline: none;
+    border: none;
+    background-color: white;
+    color: #696969;
+}
+#mc-embedded-subscribe-form input[type=email]:hover{
+    background-color: white;
 }
 #mc-embedded-subscribe-form input[type=submit]{
     width: fit-content;
@@ -67,7 +74,6 @@ html, body{
     padding: .4rem;
     color: var(--card-dark-light-color);
 	background-color: var(--card-light-light-color);
-	/* border: solid 1px var(--card-light-light-color); */
 	border: none;
     width: fit-content;
     outline: 20px;
@@ -79,12 +85,13 @@ html, body{
 	color: white;
 }
 #mergeRow-gdpr {
-    margin-top: 20px;
+    margin: 0;
 }
 #mc-embedded-subscribe-form .mc_fieldset{
     border:none;
     min-height: 0px;
     padding-bottom:0px;
+    font-size: 0.8em;
 }
 
 @media (min-width: 576px) {
@@ -104,4 +111,50 @@ html, body{
 /* Extra large devices large desktops, 1200px and up */
 @media (min-width: 1200px) {
     
+}
+
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    font-size: 0.8em;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    opacity: 0;
+    width: 100%;
+    background-color: #fff;
+    color: #555;
+    text-align: justify;
+    padding: 5px 10px;
+    line-height: 1.3em;
+    border-radius: 6px;
+    /* Position the tooltip text */
+    position: absolute;
+    margin-top: 5px;
+    z-index: 1;
+
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
