--- a/src/css/alternate.css
+++ b/src/css/alternate.css
@@ -14,6 +14,9 @@
     font-family: 'Montserrat','Roboto';
     color: var(--card-light-light-color);
 }
+* {
+    overflow: hidden;
+}
 html, body{
     width: 100%;
     height: 100vh;
@@ -24,13 +27,14 @@ html, body{
 		var(--card-dark-light-color) 6px,
 		var(--card-dark-light-color) 11px
     );
-    
 }
 .grid-wrapper{
     display: grid;
     grid-auto-rows: min-content;
-    padding: 0 1rem;
+    margin: 0 1rem;
+    padding: 0 .5rem;
     height: 100%;
+    box-shadow: 0 0 0 1100px;
 }
 .top-text{
     font-size: 1.1em;
@@ -40,7 +44,7 @@ html, body{
     background: url('/dist/assets/img/logo.png') no-repeat center;
     background-size: contain;
     width: auto;
-    height: 40vh;
+    height: 35vh;
 }
 .bottom-text{
     font-family: antro-bold;
@@ -56,6 +60,9 @@ html, body{
 }
 #mc_embed_signup_scroll > * {
     margin: .5rem 0;
+}
+#mc_embed_signup_scroll > label {
+    margin: 0;
 }
 #mc-embedded-subscribe-form input[type=email]{
     padding: .3rem;
@@ -136,7 +143,6 @@ html, body{
     position: absolute;
     margin-top: 5px;
     z-index: 1;
-
     /* Fade in tooltip */
     opacity: 0;
     transition: opacity 0.3s;
@@ -146,7 +152,7 @@ html, body{
     content: "";
     position: absolute;
     bottom: 100%;
-    left: 50%;
+    left: 20%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
@@ -157,4 +163,31 @@ html, body{
 .tooltip:hover .tooltiptext {
     visibility: visible;
     opacity: 1;
+}
+
+.stripe{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--third-color);
+	background-image: 
+	radial-gradient(
+		var(--card-dark-light-color) 17%,
+		transparent 25%
+	),
+	radial-gradient(
+		var(--card-dark-light-color) 17%,
+		transparent 25%
+	);
+    background-size: 10px 17px;
+    background-position: 0 12px,55px 32.5px;
+    z-index: 99999;
+    overflow: hidden
+}
+.stripe-left{
+    left: -95%;
+}
+.stripe-right{
+    right: -95%;
 }
