--- a/src/css/main.css
+++ b/src/css/main.css
@@ -70,9 +70,10 @@ a{
 }
 .main-header{
 	box-sizing: border-box;
-	position: absolute;
+	/* position: absolute; */
+	position: relative;
 	width: 100%;
-	height: 115px;
+	height: fit-content;
 	padding: 0;
 	left: 0;
 	z-index: 5;
@@ -113,8 +114,8 @@ a{
 	width: 105px;
 	z-index: 5;
 	position: absolute;
-	left: -2px;
-	top: 33px;
+/* 	left: -2px;
+	top: 33px; */
 }
 .nav-mobile-logo{
 	width: 40%
@@ -199,45 +200,65 @@ __________
 	padding: 0.5rem 1rem;
 	background-color: white;
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	/* The columns will be used for wider displays */
+	/* grid-template-columns: repeat(5, 1fr); */
+	grid-template-rows: repeat(5, 1fr);
 	text-align: center;
 }
 .destination{
 	display: grid;
+	color: var(--card-light-light-color);
 	grid-template-rows: min-content;
-	padding: 1em;
+	padding: 0.5rem;
 	background-color: var(--card-dark-dark-color);
-	border-radius: 40px;
+	border-radius: 5px;
 	text-transform: uppercase;
+	transform: all 0.2s ease-in;
+}
+.destination:hover{
+	transition: scale(1.2);
 }
 .destination > span:last-child{
 	font-size: .7em;
 }
-/* .roadmap > a:last-child div{
-	background-color: #487eb0;
-} */
+.connection:first-of-type{
+	border-top-color: var(--card-dark-dark-color);
+}
+.connection:first-of-type:after{
+	border-top-color: var(--card-dark-dark-color);
+}
 .connection{
 	display: block;
-	height: 1px;
 	border: 0;
-	border-top: 1px solid #ccc;
+	background-color: white;
 	margin: auto 1em;
 	padding: 0;
+	margin-bottom: 0;
+	/* The commented code is used for wider screens */
+	/* height: 1px;
+	border-top: 1px solid #ccc; */
 }
 .connection::after{
 	content: '';
 	width: 0; 
 	height: 0; 
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-	border-left: 5px solid #ccc;
-	float:right;
+	justify-self: center;
+	border: 7px solid transparent;
+    border-top: 8px solid gray;
+    border-bottom: 0 none;
 	margin-top: -10px;
+
+	/* The commented code is used for wider screens */
+/* 	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent;
+	border-left: 5px solid #ccc */;
+	/* float:right; */
 }
 .current{
 	background-color: var(--third-color);
-	border-radius: 40px;
+	color: white !important;
 	text-shadow: 2px 1px 3px black;
+	box-shadow: 0px 0px 5px 1px var(--fourth-color);
 }
 /* 
 __________
@@ -258,9 +279,11 @@ __________
 	cursor: pointer;
 }
 .main-header > .nav-toggle{
-	position: absolute;
-    top: 71px;
-	right: 5%;
+	position: relative;
+/*     top: 71px;
+	right: 5%; */
+	left: 100vw;
+    margin-left: -50px;
 	transition: left .5s ease-in-out;
 }
 .main-header > .nav-toggle div{
